--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "tasks": {
-        "start": "deno run --watch --allow-all --unstable-cron ./src/main.ts"
+        "run": "deno run --watch --allow-all --unstable-cron ./src/main.ts"
     },
     "imports": {
         "@std/assert": "jsr:@std/assert@1"
