--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
     "tasks": {
-        "run": "deno run --watch --allow-env --allow-net --unstable-cron ./src/main.ts"
+        "run": "deno run --watch --allow-env --allow-net --unstable-cron --unstable-kv ./src/main.ts"
     },
     "imports": {
         "@std/assert": "jsr:@std/assert@1"
