Adjusted GitHub Actions env var name in workflows YAML file.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Call WOWCAM Deno /scrape endpoint
         run: |
-          curl -fsS "https://mbodm-wowcam.deno.dev/scrape?token=${{ secrets.WOWCAM_TOKEN }}"
+          curl -fsS "https://mbodm-wowcam.deno.dev/scrape?token=${{ secrets.WOWCAM_DENO_TOKEN }}"
