Renamed the GitHub Actions trigger from 'ping' to 'scrape_trigger' for better understanding.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  ping:
+  scrape_trigger:
     runs-on: ubuntu-latest
     steps:
       - name: Call WOWCAM Deno /scrape endpoint
